# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/fixed
# [V] version change
# ====================================================================


# 2017-01-30
# --------------------------------------------------------------------
# + cut release v3.3 for individual plotting and other tweaks


# 2017-01-25
# --------------------------------------------------------------------
# + have both options for fit chi2/ndf and fit Chi2TestX() but the
#   numbers don't agree... but the Chi2TestX() number looks
#   more reseanable I think?
# + added the number of days to 'data' in the hi-e and lo-e plots
# + added chi2/ndf to the total mc fit results plots
# + print chi2/ndf of the total mc compared to data...
#   it will need some tweaking later one...
# + now save plots to ./plots and make dir if doesn't exist
# + separate/individual plotting now works for all things!
#   The key was to have a separate canvas name for everything
#   and to Clone() the top and bottom pads - I'm super excited
#   about this awesome feature!
# V switching to 33-separate-plots.py
# + cut a new release v3.2 since things are in good shape right now
# + print bkgs and sigs activities in the legend


# 2017-01-24
# --------------------------------------------------------------------
# ~ rebuilt all backgrounds with primParticleName cut
# ~ cleaned up scaleSigs32() and scaleBkgs32() 
# ~ v32 now using scaleSigs32() and scaleBkgs32()
# + add scaleSigs32() and doesn't need data input anymore
# + add scaleBkgs32() and doesn't need data input anymore
# ~ cleaned up scaleBkgs()
# + TCut on primParticleName! This was critial to get generated
#   event count correct.


# 2017-01-23
# --------------------------------------------------------------------
# + add full path to funcs.py files so things work on the cluster
#   mainly for join.py files