@@ -1,0 +1,35 @@
+#!/usr/bin/env python
+######################################################################
+# Get single-hit data into the processing stream
+#
+# Works with v40 and later versions
+#
+# version: 2017-01-30
+# 
+# Change Log (key == [+] added, [-] removed, [~] changed)
+#---------------------------------------------------------------------
+# + funcs4.py clean slate
+# 
+# email me: mkauer@physics.wisc.edu
+######################################################################
+# 
+# Where is MC?
+# /data/MC/KIMS-NaI/user-scratch/sim/processed/newGeometry/
+# 
+# Where is the processed data?
+# Right now I'm using:
+# /data/COSINE/NTP/phys/V00-02-00
+# and run ntp_I001546*
+# 
+######################################################################
+
+import os,sys
+import numpy as np
+from ROOT import *
+import ROOT
+
+sys.path.append("/home/mkauer/COSINE/CUP/mc-fitting/")
+sys.path.append("/home/mkauer/mc-fitting/")
+from funcs32 import *
+
+
