@@ -14,6 +14,8 @@
 
 # 2017-01-30
 # --------------------------------------------------------------------
+
+# V switching to 40-single-hit.py
 # + cut release v3.3 for individual plotting and other tweaks
 
 
